Make Minor Adjustment

--- a/GridShowcase/public/assets/css/index.css
+++ b/GridShowcase/public/assets/css/index.css
@@ -40,7 +40,7 @@ nav {
 
   height: 100vh;
 
-  padding: 30px 350px;
+  padding: 30px 50vw;
   padding-right: 40px;
 
   background: rgba(255, 255, 255, 0.991);
